fixed breadcrumps z-index, banner box shadow, started subscription content, ajax payment history

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -25,11 +25,6 @@ a {
   }
 }
 
-button {
-  border: none;
-  background: transparent;
-}
-
 .h3 {
   font-size: 1.3rem;
   font-weight: 700;
